# poker-agent

./: .coverage  .env.example  .gitignore  BUILD_CHARTER.md  CONTRIBUTING.md  README.md  SYSTEM_DESIGN.md  TODO.md  main.py  pyproject.toml  pyrefly.toml
.claude/: context.md  guidelines.md
.claude/commands/: analyze-costs.md  db-migrate.md  docs.md  lint.md  poker-verify.md  review.md  setup.md  test.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  poker_logic_issue.md
data/: gto_ranges.json  poker_coach.db  quiz_bank.json
docs/: sqlalchemy.md  textual.md  treys.md
docs/architecture/: FLOW.md  OVERVIEW.md
docs/libraries/: README.md  langchain.md  sqlalchemy.md  textual.md  treys.md
docs/modules/: agent.md  core.md  database.md  quiz.md  tools.md  tui.md
scratch_files/: range_based_equity.md
scripts/: run_tests.sh
src/: __main__.py  config.py
src/agent/: __init__.py  coach.py  prompts.py
src/core/: gto_charts.py  hand_evaluator.py  hand_history.py  outs_calculator.py  poker_math.py  range_parser.py  session_tracker.py  spot_analyzer.py
src/database/: __init__.py  db.py  models.py  service.py
src/quiz/: __init__.py  engine.py  questions.py
src/tools/: __init__.py  hand_eval_tools.py  history_tools.py  quiz_tools.py  range_tools.py  session_tools.py
src/tui/: __init__.py  app.py
tests/agent/: test_coach.py
tests/core/: test_gto_charts.py  test_hand_evaluator.py  test_hand_history.py  test_outs_calculator.py  test_poker_math.py  test_range_parser.py  test_session_tracker.py  (+1 more)
(+28 files in other folders)
