[project]
name = "poker-agent"
version = "0.1.0"
description = "A beautiful TUI poker coaching application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.0",
    "black>=25.12.0",
    "langchain>=1.2.3",
    "langchain-anthropic>=1.3.1",
    "plotext>=5.3.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "ruff>=0.14.11",
    "sqlalchemy>=2.0.45",
    "textual>=7.2.0",
    "treys>=0.1.8",
    "typer>=0.21.1",
]

[project.scripts]
poker-coach = "src.tui.app:run_app"
